Fix overflow for advantages-list-item and page-footer

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -233,7 +233,7 @@ html {
 }
 
 .advantages-list-item {
-  height: 385px;
+  min-height: 385px;
 }
 
 .advantages-list-container {
@@ -556,6 +556,7 @@ html {
 .page-footer {
   display: flex;
   justify-content: space-between;
+  gap: 20px;
   align-items: center;
   margin-top: 45px;
   margin-bottom: 35px;
